Change content height to auto to prevent text overflow

--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ body {
     border-radius: 10px;
     padding: 0px 30px;
     width: 300px;
-    height: 300px;
+    height: auto;
 }
 
 #content p span {
